# etangocards

./: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
data/: Makefile  Makefile.in
data/icons/: Makefile  Makefile.in
data/ui/: dialog_alert_package.ui  dialog_creation_package.ui  dialog_new.ui  dialog_package.ui  dialog_preferences.ui  dialog_quiz_answer.ui  dialog_quiz_back.ui  dialog_quiz_front.ui  dialog_quiz_result.ui
doc/: Makefile.am
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in
src/: Doxyfile  ETangoCards_Applet.server  Makefile.am  Makefile.in  card.cpp  card.h  control-system.cpp  control-system.h  dialog-alert-package.cpp  dialog-alert-package.h  dialog-creation-package.cpp  dialog-creation-package.h  dialog-new.cpp  dialog-new.h  dialog-package.cpp  dialog-package.h  dialog-preferences.cpp  dialog-preferences.h  dialog-quiz-answer.cpp  dialog-quiz-answer.h  dialog-quiz-back.cpp  dialog-quiz-back.h  dialog-quiz-front.cpp  dialog-quiz-front.h  dialog-quiz-result.cpp  dialog-quiz-result.h  etangocards-applet.cpp  etangocards-applet.h  main.cpp  main.h  package.cpp  package.h  quiz.cpp  quiz.h
